fix copyright covering malta on smaller screens

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -84,6 +84,16 @@ body{
   font-size:11px!important;
   }
 }
+
+/* between 1050w and 600h the copyright hides crete and malta */
+@media only screen and (max-width: 1050px) and (max-height: 600px) {
+.dorling-attribution{
+  left:3px!important;
+  right:unset!important;
+}
+
+}
+
 .dorling-main-container {
   position:absolute;
   height:100%;
